Fix image squashing

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -10,7 +10,7 @@
 }
 .hero-background {
   position: absolute;
-  object-fit: fill;
+  object-fit: cover;
   object-position: top right;
   width: 100%;
   height: 100%;
@@ -38,13 +38,5 @@
   }
   .container {
     margin: auto;
-  }
-  .hero-background {
-    position: absolute;
-    object-fit: cover;
-    object-position: top right;
-    width: 100%;
-    height: 100%;
-    z-index: -2;
   }
 }
